# nlpb

./: .gitignore  COMMANDS.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  main.py  pyproject.toml  start-backend.sh  start-frontend.sh
backend/: main.py
backend/api/: routes.py
backend/core/: config.py
backend/models/: schemas.py
backend/services/: fake_news_service.py  resume_service.py  sentiment_service.py
frontend/: app.py
frontend/pages/: 1_sentiment_analysis.py  2_resume_screening.py  3_fake_news_detection.py
