[project]
name = "nlpb"
version = "0.1.0"
description = "NLP for Business Intelligence - Sentiment Analysis, Resume Screening, and Fake News Detection"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.39.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "plotly>=5.24.0",
    "textblob>=0.18.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
]
